<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".ui.DetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/primaryColor"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/secondaryColor" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/shape_rectangle_bg_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/secondaryColor" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="@string/username" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewRepo"
            android:layout_width="67dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_rectangle_detail_repo_foll"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" >

            <View
                android:id="@+id/view2"
                android:layout_width="67dp"
                android:layout_height="18dp"
                android:background="@drawable/shape_rectangle_detail_repo_foll_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositori"
                android:textSize="12sp"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRepo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numRepo"
                android:textColor="@color/white"
                android:padding="5dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewFollowing"
            android:layout_width="67dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_rectangle_detail_repo_foll"
            app:layout_constraintStart_toEndOf="@+id/viewRepo"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername">

            <View
                android:id="@+id/view3"
                android:layout_width="67dp"
                android:layout_height="18dp"
                android:background="@drawable/shape_rectangle_detail_repo_foll_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFollowing"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/numFollowing"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewFollowers"
            android:layout_width="67dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_rectangle_detail_repo_foll"
            app:layout_constraintStart_toEndOf="@+id/viewFollowing"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername">

            <View
                android:id="@+id/view4"
                android:layout_width="67dp"
                android:layout_height="18dp"
                android:background="@drawable/shape_rectangle_detail_repo_foll_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFollowers"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/numFollowers"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iconCompany"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_company_white_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        android:contentDescription="@string/todo" />
    <ImageView
        android:id="@+id/iconLocation"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_location_white_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconCompany"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="5dp"
        android:text="@string/description"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/iconCompany"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/iconLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

    <include
        android:id="@+id/include_empty"
        layout="@layout/empty"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>